--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanblog/server",
-  "version": "0.0.1",
+  "version": "0.54.0-corn.0",
   "description": "",
   "author": "",
   "private": true,
