--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vanblog-cli",
-  "version": "1.0.0",
+  "version": "0.54.0-corn.0",
   "description": "",
   "main": "index.js",
   "scripts": {
