--- a/packages/waline/package.json
+++ b/packages/waline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanblog/waline",
-  "version": "1.0.0",
+  "version": "0.54.0-corn.0",
   "main": "index.js",
   "type": "module",
   "license": "MIT",
