[Fix] Rewrite Dockerfile and admin package‘s build config
For admin package:
1. Upgrade ant-design 's deps
2. Upgrade esbuild to 0.12.15

For main Dockerfile and entrypoint.sh:
1. Up to node 22
2. Rewrite all the build steps
3. Use pnpm at all

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -7,7 +7,7 @@
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider umi build",
     "deploy": "npm run build && npm run gh-pages",
-    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider npm run start:dev",
+    "dev": "cross-env npm run start:dev",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "umi g tmp",
@@ -23,11 +23,10 @@
     "prepare": "echo 'pre'",
     "prettier": "prettier -c --write \"src/**/*\"",
     "serve": "umi-serve",
-    "start": " cross-env MOCK=none UMI_ENV=dev PORT=3002 umi dev",
+    "start": "cross-env MOCK=none UMI_ENV=dev PORT=3002 umi dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
     "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
     "start:no-ui": "cross-env UMI_UI=none UMI_ENV=dev umi dev",
-    "start:node17": "cross-env  NODE_OPTIONS=--openssl-legacy-provider  MOCK=none UMI_ENV=dev PORT=3002 umi dev",
     "start:pre": "cross-env REACT_APP_ENV=pre UMI_ENV=dev umi dev",
     "start:test": "cross-env REACT_APP_ENV=test MOCK=none UMI_ENV=dev umi dev",
     "test": "umi test",
@@ -43,12 +42,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.1",
     "@ant-design/plots": "^1.2.6",
-    "@ant-design/pro-card": "^1.20.22",
-    "@ant-design/pro-components": "^1.1.25",
-    "@ant-design/pro-descriptions": "^1.12.7",
-    "@ant-design/pro-form": "^1.74.7",
-    "@ant-design/pro-layout": "^6.38.22",
-    "@ant-design/pro-table": "^2.80.8",
+    "@ant-design/pro-card": "^2.5.14",
+    "@ant-design/pro-components": "^2.6.49",
+    "@ant-design/pro-descriptions": "^2.6.3",
+    "@ant-design/pro-form": "^2.24.0",
+    "@ant-design/pro-layout": "^7.17.19",
+    "@ant-design/pro-table": "^3.14.5",
     "@bytemd/plugin-breaks": "^1.21.0",
     "@bytemd/plugin-frontmatter": "^1.21.0",
     "@bytemd/plugin-gfm": "^1.21.0",
@@ -112,6 +111,7 @@
     "cross-env": "^7.0.3",
     "cross-port-killer": "^1.4.0",
     "detect-installer": "^1.0.2",
+    "esbuild": "^0.12.15",
     "eslint": "^7.32.0",
     "gh-pages": "^3.2.3",
     "jsdom-global": "^3.0.2",
