--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,65 +25,65 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.4.3",
-    "@nestjs/core": "^9.4.3",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.4.3",
-    "@nestjs/schedule": "^2.2.3",
-    "@nestjs/swagger": "^6.3.0",
-    "@types/line-reader": "^0.0.34",
-    "@types/request-ip": "^0.0.37",
-    "axios": "^1.6.2",
-    "cheerio": "1.0.0-rc.12",
-    "compressing": "^1.10.0",
-    "dayjs": "^1.11.10",
-    "express": "^4.18.2",
+    "@nestjs/common": "^11.0.11",
+    "@nestjs/core": "^11.0.11",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/schedule": "^5.0.1",
+    "@nestjs/swagger": "^11.0.6",
+    "@types/line-reader": "^0.0.37",
+    "@types/request-ip": "^0.0.41",
+    "axios": "^1.8.2",
+    "cheerio": "1.0.0",
+    "compressing": "^1.10.1",
+    "dayjs": "^1.11.13",
+    "express": "^4.21.2",
     "feed": "^4.2.2",
-    "highlight.js": "^11.9.0",
-    "image-size": "^1.0.2",
-    "jimp": "^0.22.10",
-    "js-base64": "^3.7.5",
-    "js-sha256": "^0.9.0",
+    "highlight.js": "^11.11.1",
+    "image-size": "^2.0.0",
+    "jimp": "^1.6.0",
+    "js-base64": "^3.7.7",
+    "js-sha256": "^0.11.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
-    "markdown-it": "^13.0.2",
+    "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-task-lists": "^2.1.1",
-    "mongodb": "^5.9.1",
-    "mongoose": "^7.6.6",
-    "passport": "^0.6.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "picgo": "^1.5.6",
-    "pino": "^8.16.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.4.1",
-    "rxjs": "^7.8.1",
-    "sitemap": "^7.1.1",
-    "swagger-ui-express": "^4.6.3",
-    "yaml": "^2.3.4"
+    "picgo": "^1.5.8",
+    "pino": "^9.6.0",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "rxjs": "^7.8.2",
+    "sitemap": "^8.0.0",
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.5.0",
-    "@nestjs/schematics": "^9.2.0",
-    "@nestjs/testing": "^9.4.3",
-    "@types/express": "^4.17.21",
-    "@types/jest": "29.4.1",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^18.18.13",
-    "@types/passport-jwt": "^3.0.13",
+    "@nestjs/cli": "^11.0.5",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/testing": "^11.0.11",
+    "@types/express": "^5.0.0",
+    "@types/jest": "29.5.14",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.10",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^2.0.16",
-    "jest": "29.5.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "29.7.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "29.0.5",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "4.1.2",
-    "typescript": "^4.9.5"
+    "supertest": "^7.0.0",
+    "ts-jest": "29.2.6",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
