--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,61 +9,66 @@
     "start": "next start"
   },
   "dependencies": {
-    "@bytemd/plugin-gfm": "^1.21.0",
-    "@bytemd/plugin-highlight-ssr": "^1.21.0",
-    "@bytemd/plugin-math-ssr": "^1.21.0",
-    "@bytemd/plugin-mermaid": "^1.21.0",
-    "@bytemd/react": "^1.21.0",
-    "@next/bundle-analyzer": "^13.5.6",
-    "@types/lodash": "^4.14.202",
-    "@types/markdown-navbar": "^1.4.3",
-    "@waline/client": "^2.15.8",
-    "bytemd": "^1.21.0",
+    "@bytemd/plugin-gfm": "^1.22.0",
+    "@bytemd/plugin-highlight-ssr": "^1.22.0",
+    "@bytemd/plugin-math-ssr": "^1.22.0",
+    "@bytemd/plugin-mermaid": "^1.22.0",
+    "@bytemd/react": "^1.22.0",
+    "@next/bundle-analyzer": "^15.2.1",
+    "@types/lodash": "^4.17.16",
+    "@types/markdown-navbar": "^1.4.4",
+    "@waline/client": "^3.5.5",
+    "bytemd": "^1.22.0",
+    "client-only": "^0.0.1",
     "copy-to-clipboard": "^3.3.3",
-    "dayjs": "^1.11.10",
-    "eslint-config-next": "^13.5.6",
+    "dayjs": "^1.11.13",
+    "eslint-config-next": "^15.2.1",
     "headroom.js": "^0.12.0",
-    "js-base64": "^3.7.5",
-    "katex": "^0.16.9",
+    "js-base64": "^3.7.7",
+    "katex": "^0.16.21",
     "lodash": "^4.17.21",
     "medium-zoom": "^1.1.0",
-    "mermaid": "^10.6.1",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
+    "mermaid": "^11.4.1",
+    "next": "^15.2.1",
+    "react": "^19.0.0",
+    "react-burger-menu": "^3.1.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-photo-view": "^1.2.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-tiny-popover": "^7.2.4",
-    "react-use": "^17.4.1",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-photo-view": "^1.2.7",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-tiny-popover": "^8.1.6",
+    "react-use": "^17.6.0",
     "rehype-raw": "^6.1.1",
-    "remark-directive": "^2.0.1",
-    "remark-gfm": "^3.0.1",
-    "remark-rehype": "^10.1.0",
-    "sharp": "^0.31.3",
-    "unist-util-visit": "^4.1.2"
+    "remark-directive": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.1",
+    "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.99",
-    "@swc/jest": "^0.2.29",
-    "@types/hast": "^2.3.8",
+    "@swc/core": "^1.11.8",
+    "@swc/jest": "^0.2.37",
+    "@tailwindcss/postcss": "^4.0.12",
+    "@types/hast": "^3.0.4",
     "@types/headroom.js": "^0.12.4",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-burger-menu": "^2.8.6",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "@types/react-burger-menu": "^2.8.7",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "18.0.11",
+    "@types/react-dom": "19.0.4",
     "@types/react-headroom": "^3.2.3",
     "@types/react-scroll": "^1.8.10",
-    "@types/react-syntax-highlighter": "^15.5.10",
-    "autoprefixer": "^10.4.16",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "typescript": "4.9.5",
-    "vitest": "0.29.2"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.8.2",
+    "unified": "^11.0.5",
+    "vitest": "3.0.8"
   },
   "version": "0.54.0-corn.1"
 }
