[Feat] Use better structure in `vanblog.sh` and add waline management

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -8,7 +8,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "noEmit": true,
+    "noEmit": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
