--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -4,33 +4,26 @@
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
-    "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider umi build",
+    "analyze": "vite build --mode analyze",
+    "build": "vite build",
     "deploy": "npm run build && npm run gh-pages",
-    "dev": "cross-env npm run start:dev",
+    "dev": "vite",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
-    "postinstall": "umi g tmp",
-    "lint": "umi g tmp && npm run lint:js && npm run lint:style && npm run lint:prettier && npm run tsc",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
     "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src && npm run lint:style",
     "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
     "lint:prettier": "prettier -c --write \"src/**/*\" --end-of-line auto",
     "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
-    "openapi": "umi openapi",
     "playwright": "playwright install && playwright test",
     "prepare": "echo 'pre'",
     "prettier": "prettier -c --write \"src/**/*\"",
-    "serve": "umi-serve",
-    "start": "cross-env MOCK=none UMI_ENV=dev PORT=3002 umi dev",
-    "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
-    "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
-    "start:no-ui": "cross-env UMI_UI=none UMI_ENV=dev umi dev",
-    "start:pre": "cross-env REACT_APP_ENV=pre UMI_ENV=dev umi dev",
-    "start:test": "cross-env REACT_APP_ENV=test MOCK=none UMI_ENV=dev umi dev",
-    "test": "umi test",
-    "test:component": "umi test ./src/components",
+    "serve": "vite preview",
+    "start": "vite --port 3002",
+    "test": "vitest run",
+    "test:component": "vitest run ./src/components",
     "test:e2e": "node ./tests/run-tests.js",
     "tsc": "tsc --noEmit"
   },
@@ -40,10 +33,10 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.8.1",
+    "@ant-design/icons": "^5.2.6",
     "@ant-design/plots": "^1.2.6",
     "@ant-design/pro-card": "^2.5.14",
-    "@ant-design/pro-components": "^2.6.49",
+    "@ant-design/pro-components": "^2.6.50",
     "@ant-design/pro-descriptions": "^2.6.3",
     "@ant-design/pro-form": "^2.24.0",
     "@ant-design/pro-layout": "^7.17.19",
@@ -58,9 +51,12 @@
     "@bytemd/react": "^1.21.0",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
-    "@umijs/route-utils": "^2.2.2",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/editor-plugin-chart": "^3.0.1",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "ansi-to-html": "^0.7.2",
-    "antd": "^4.24.15",
+    "antd": "^5.14.0",
     "antd-img-crop": "^4.17.0",
     "btoa": "^1.2.1",
     "bytemd": "^1.21.0",
@@ -70,25 +66,27 @@
     "front-matter": "^4.0.2",
     "highlight.js": "^11.9.0",
     "js-sha256": "^0.9.0",
-    "katex": "^0.16.9",
+    "katex": "^0.16.21",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "monaco-editor": "^0.34.1",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "omit.js": "^2.0.2",
     "pinyin-match": "^1.2.5",
+    "prismjs": "^1.30.0",
     "rc-menu": "^9.12.2",
     "rc-resize-observer": "^1.4.0",
     "rc-util": "^5.38.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-contexify": "^5.0.0",
     "react-dev-inspector": "^1.9.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-monaco-editor": "^0.50.1",
+    "react-router-dom": "^6.22.3",
     "rehype-raw": "^6.1.1",
     "remark-directive": "^2.0.1",
-    "umi": "^3.5.41",
+    "tui-color-picker": "^2.2.8",
     "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
@@ -98,28 +96,28 @@
     "@types/history": "^4.7.11",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.202",
-    "@types/react": "^17.0.71",
-    "@types/react-dom": "^17.0.25",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.3.19",
+    "@types/react-dom": "^18.2.22",
     "@types/react-helmet": "^6.1.9",
-    "@umijs/openapi": "^1.9.2",
-    "@umijs/plugin-blocks": "^2.2.2",
-    "@umijs/plugin-esbuild": "^1.4.2",
-    "@umijs/plugin-openapi": "^1.3.3",
-    "@umijs/preset-ant-design-pro": "^1.3.3",
-    "@umijs/preset-dumi": "^1.1.54",
-    "@umijs/preset-react": "^2.1.7",
+    "@vitejs/plugin-react": "^4.2.1",
     "cross-env": "^7.0.3",
     "cross-port-killer": "^1.4.0",
     "detect-installer": "^1.0.2",
     "esbuild": "^0.12.15",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.0",
     "gh-pages": "^3.2.3",
     "jsdom-global": "^3.0.2",
+    "less": "^4.2.0",
+    "less-loader": "5.0.0",
     "mockjs": "^1.1.0",
     "stylelint": "^13.13.1",
     "swagger-ui-react": "^3.52.5",
-    "typescript": "^4.9.5",
-    "umi-serve": "^1.9.11"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vite-plugin-monaco-editor": "^1.1.0",
+    "vite-plugin-style-import": "^2.0.0",
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": "^18.0.0 || >= 20.0.0"
